tests/trybuild/typed-columns/03_gt_wrong_value_type.stderr
error[E0308]: mismatched types
  --> tests/trybuild/typed-columns/03_gt_wrong_value_type.rs:30:32
   |
30 |         .gt(Posts::view_count, "abc");
   |          --                    ^^^^^ expected `i32`, found `&str`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> src/postgrest/typed_builder.rs
   |
   |     pub fn gt<V>(mut self, col: Column<R, V>, val: V) -> Self
   |            ^^
